src/objects/Financial_Application__c.object
<CustomObject>
    <description>Financial Applications for MOHCD Homeownership Programs</description>
    <fields>
        <fullName>AMI_Lookup_Amount__c</fullName>
        <label>AMI Lookup Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMI_Source__c</fullName>
        <label>AMI Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal - HUD Unadjusted</fullName>
                </value>
                <value>
                    <fullName>Federal - County Median</fullName>
                </value>
                <value>
                    <fullName>State - HCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMI_Year__c</fullName>
        <label>AMI Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Other_Monthly_Debt__c</fullName>
        <formula>Monthly_HOA_Dues__c + Monthly_Homeowner_s_Insurance__c + Monthly_Property_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly HOA Dues + Monthly Homeowners Insurance + Monthly Property Tax</inlineHelpText>
        <label>All Other Monthly Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_First_Mortgage__c</fullName>
        <label>Amount of First Mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_First_Mortgage_from_above__c</fullName>
        <formula>Amount_of_First_Mortgage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of First Mortgage (from above)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_of_Down_Pmt_Borrower_Own_Monies__c</fullName>
        <label>Amt. of Down Pmt. (Borrower Own Monies)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_of_Down_Pmt_from_Gifts__c</fullName>
        <label>Amt. of Down Pmt. (from Gifts)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_HOA_Dues__c</fullName>
        <formula>Monthly_HOA_Dues__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly HOA Dues * 12</inlineHelpText>
        <label>Annual HOA Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Homeowner_s_Insurance__c</fullName>
        <formula>Monthly_Homeowner_s_Insurance__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Homeowners Insurance * 12</inlineHelpText>
        <label>Annual Homeowner&apos;s Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Mortgage_Payment__c</fullName>
        <formula>X1st_Mortgage_Monthly_Mortgage_Payment__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1st Mortgage Monthly Mortgage Payment * 12</inlineHelpText>
        <label>Annual Mortgage Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Property_Tax__c</fullName>
        <formula>Purchase_Price__c * Property_Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Purchase Price * Property Tax Rate</inlineHelpText>
        <label>Annual Property Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_Additional_Cash_from_Borrower__c</fullName>
        <label>Any Additional Cash from Borrower</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Additional Information Required</fullName>
                </value>
                <value>
                    <fullName>Pending Final Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Under Appeal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_BMRDALP__c</fullName>
        <formula>IF(
Total_Household_Imputed_Assets_BMR_DALP__c - Purchase_Price__c &gt; 60000,
&quot;Fail&quot;,
&quot;Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Total Household Imputed Assets After Purchase &gt; 60,000, then &quot;Fail&quot; ELSE &quot;Pass&quot;</inlineHelpText>
        <label>Asset Test Result - BMRDALP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_BMR_DALP_Plus__c</fullName>
        <formula>IF( 

OR(Total_Household_Imputed_Assets__c &gt; 200000, 
Total_Household_Imputed_Assets__c - Purchase_Price__c &gt; 60000), 
&quot;Fail&quot;, 
&quot;Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Test Result - BMR-DALP Plus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_CSLP__c</fullName>
        <formula>IF(

OR(Total_Household_Imputed_Assets__c &gt; 200000,
Total_Household_Imputed_Assets__c - Purchase_Price__c &gt; 60001),
&quot;Fail&quot;,
&quot;Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Total Household Imputed Assets Before Purchase &gt; 200,000 OR If Total Household Imputed Assets After Purchase &gt; 60,001, then &quot;Fail&quot; ELSE &quot;Pass&quot;</inlineHelpText>
        <label>Asset Test Result - CSLP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_DALP__c</fullName>
        <formula>IF( 

OR(Total_Household_Imputed_Assets__c &gt; 200000,
Total_Household_Imputed_Assets__c - Purchase_Price__c &gt; 60000),
&quot;Fail&quot;,
&quot;Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Total Household Imputed Assets Before Purchase &gt; 200,000 OR If Total Household Imputed Assets After Purchase &gt; 60,000, then &quot;Fail&quot; ELSE &quot;Pass&quot;</inlineHelpText>
        <label>Asset Test Result - DALP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_FRDALP__c</fullName>
        <formula>IF(
Total_Household_Imputed_Assets__c - Purchase_Price__c &gt; 100000,
&quot;Fail&quot;,
&quot;Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Test Result - FRDALP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_TND__c</fullName>
        <formula>IF(
Total_Household_Imputed_Assets__c - Purchase_Price__c &gt; 60000,
&quot;Fail&quot;,
&quot;Pass&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Total Household Imputed Assets After Purchase &gt; 60,000, then &quot;Fail&quot; ELSE &quot;Pass&quot;</inlineHelpText>
        <label>Asset Test Result - TND</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_AMI_Table_Lookup_Limit__c</fullName>
        <label>BMR-DALP AMI Table Lookup Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Amount_Requested_Spelled_Out__c</fullName>
        <label>BMR-DALP Amount Requested Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Amount_Requested__c</fullName>
        <label>BMR-DALP Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Funding_Source_s__c</fullName>
        <label>BMR-DALP Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Loan_ID__c</fullName>
        <defaultValue>&quot;BMRDALP-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>BMR-DALP Loan ID#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Median_Income_Table_Source__c</fullName>
        <defaultValue>&apos;State - HCD&apos;</defaultValue>
        <label>BMR-DALP Median Income Table Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Median_Income_Table_Year__c</fullName>
        <label>BMR-DALP Median Income Table Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_AMI_Table_Lookup_Limit__c</fullName>
        <label>BMR-DALP Plus AMI Table Lookup Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Amount_Req_Spelled_Out__c</fullName>
        <label>BMR-DALP Plus Amount Req Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Amount_Requested__c</fullName>
        <label>BMR-DALP Plus Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Funding_Source_s__c</fullName>
        <label>BMR-DALP Plus Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Loan_ID__c</fullName>
        <defaultValue>&quot;BMRDALPPLUS-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>BMR-DALP Plus Loan ID #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Median_Income_Table_Source__c</fullName>
        <defaultValue>&apos;Federal - HUD Unadjusted&apos;</defaultValue>
        <label>BMR-DALP Plus Median Income Table Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Median_Income_Table_Year__c</fullName>
        <label>BMR-DALP Plus Median Income Table Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus_Ratio__c</fullName>
        <formula>BMR_DALP_Plus_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR-DALP Plus Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMR-DALP Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMR_DALP_Ratio__c</fullName>
        <formula>BMR_DALP_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMR-DALP Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BMR_DALP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMR-DALP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMR_Lien_Amount_Spelled_Out__c</fullName>
        <label>BMR Lien Amount Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMR_Lien_Amount__c</fullName>
        <formula>Fair_Market_Appraised_Value__c - Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fair Market Appraised Value - Purchase Price. Will be auto-filled by the system.</inlineHelpText>
        <label>BMR Lien Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bankrupty_Declaration_Explanation__c</fullName>
        <label>Bankrupty Declaration Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_s_Total_Downpayment__c</fullName>
        <formula>Amt_of_Down_Pmt_Borrower_Own_Monies__c +  Amt_of_Down_Pmt_from_Gifts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Downpayment from Borrower + Downpayment from Gifts</inlineHelpText>
        <label>Borrower&apos;s Total Downpayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Borrowers_move_in_60_days_post_closing__c</fullName>
        <inlineHelpText>Do Borrower(s) intend to occupy the property within 60 days of close of escrow?</inlineHelpText>
        <label>Borrowers move in &lt; 60 days post-closing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSLP_AMI_Table_Lookup_Limit__c</fullName>
        <label>CSLP AMI Table Lookup Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSLP_Amount_Requested_Spelled_Out__c</fullName>
        <label>CSLP Amount Requested Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLP_Amount_Requested__c</fullName>
        <label>CSLP Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSLP_Funding_Source_s__c</fullName>
        <label>CSLP Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSLP_Loan_ID__c</fullName>
        <defaultValue>&quot;CSLP-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>CSLP Loan ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLP_Median_Income_Table_Source__c</fullName>
        <defaultValue>&apos;Federal - HUD Unadjusted&apos;</defaultValue>
        <label>CSLP Median Income Table Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLP_Median_Income_Table_Year__c</fullName>
        <label>CSLP Median Income Table Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSLP_Ratio__c</fullName>
        <formula>CSLP_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CSLP Amount Requested / Purchase Price</inlineHelpText>
        <label>CSLP Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSLP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSLP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <label>Census Tract #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Combined_Loan_to_Value_CLTV__c</fullName>
        <formula>(Amount_of_First_Mortgage__c + Total_Amount_Requested_from_CCSF__c + Total_Other_Financing__c) / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Amount of First Mortgage + Amount Requested from CCSF + Other Financing) / Purchase Price</inlineHelpText>
        <label>Combined Loan-to-Value (CLTV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Copy_Existing_Info__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do you want to copy existing information from the Household account and application? Check to copy, uncheck to start a blank application.</inlineHelpText>
        <label>Copy Existing Information ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Monthly_Mortgage_Rent_Amount__c</fullName>
        <label>Current Monthly Mortgage / Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DALP_AMI_Table_Lookup_Limit__c</fullName>
        <label>DALP AMI Table Lookup Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DALP_Amount_Requested_Spelled_Out__c</fullName>
        <label>DALP Amount Requested Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DALP_Amount_Requested__c</fullName>
        <label>DALP Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DALP_Funding_Source_s__c</fullName>
        <label>DALP Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DALP_Loan_ID__c</fullName>
        <defaultValue>&quot;DALP-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>DALP Loan ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DALP_Median_Income_Table_Source__c</fullName>
        <defaultValue>&apos;Federal - HUD Unadjusted&apos;</defaultValue>
        <label>DALP Median Income Table Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DALP_Median_Income_Table_Year__c</fullName>
        <label>DALP Median Income Table Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DALP_Percent_of_Median_Max__c</fullName>
        <label>DALP Percent of Median Max</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DALP_Ratio__c</fullName>
        <formula>DALP_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DALP Amount Requested / Purchase Price</inlineHelpText>
        <label>DALP Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DALP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DALP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Date__c</fullName>
        <label>Deed of Trust Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Image_Page__c</fullName>
        <label>Deed of Trust Document Image/Page #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Recorded_Date__c</fullName>
        <label>Deed of Trust Document Recorded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Recorded__c</fullName>
        <label>Deed of Trust Document Recorded #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_of_Trust_Document_Reel_Book__c</fullName>
        <label>Deed of Trust Document Reel/Book #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Name__c</fullName>
        <label>Development Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earnest_Money_Deposit_Amount__c</fullName>
        <label>Earnest Money Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Earnest_Money_Deposit_Ratio__c</fullName>
        <formula>Earnest_Money_Deposit_Amount__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Earnest Money Deposit Amount / Purchase Price</inlineHelpText>
        <label>Earnest Money Deposit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Earnest_Money_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Earnest Money Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escrow_Account_Number__c</fullName>
        <label>Escrow Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Acct_Institution_Address__c</fullName>
        <label>Escrow Acct - Institution Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escrow_Acct_Institution_Name__c</fullName>
        <label>Escrow Acct - Institution Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Acct_Institution_Phone_Number__c</fullName>
        <label>Escrow Acct - Institution Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Escrow_Amount_Deposited__c</fullName>
        <label>Escrow Amount Deposited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow_Date_of_Deposit__c</fullName>
        <label>Escrow Date of Deposit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Closing_Costs__c</fullName>
        <label>Estimated Closing Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Prepaid_Escrow__c</fullName>
        <label>Estimated Prepaid Escrow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRDALP_AMI_Table_Lookup_Limit__c</fullName>
        <label>FRDALP AMI Table Lookup Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRDALP_Amount_Requested_Spelled_Out__c</fullName>
        <label>FRDALP Amount Requested Spelled Out</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRDALP_Amount_Requested__c</fullName>
        <label>FRDALP Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRDALP_Funding_Source_s__c</fullName>
        <label>FRDALP Funding Source(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FRDALP_Loan_ID__c</fullName>
        <defaultValue>&quot;FRDALP-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>FRDALP Loan ID#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRDALP_Median_Income_Table_Source__c</fullName>
        <defaultValue>&apos;Federal - HUD Unadjusted&apos;</defaultValue>
        <label>FRDALP Median Income Table Source</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRDALP_Median_Income_Table_Year__c</fullName>
        <label>FRDALP Median Income Table Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FRDALP_Ratio__c</fullName>
        <formula>FRDALP_Amount_Requested__c / Purchase_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FRDALP Amount Requested / Purchase Price</inlineHelpText>
        <label>FRDALP Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FRDALP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FRDALP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Appraised_Value__c</fullName>
        <label>Fair Market Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Mortgage_Holder_Address__c</fullName>
        <label>First Mortgage Holder Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Mortgage_Holder__c</fullName>
        <label>First Mortgage Holder</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Borrower_or_co_borrowers_owned_prop__c</fullName>
        <inlineHelpText>Has any Borrower or Co-Borrower owned any property as a principal residence?</inlineHelpText>
        <label>Has Borrower or co-borrowers owned prop?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_any_member_owned_a_unit_last_3_yrs__c</fullName>
        <label>Has any member owned a unit (last 3 yrs)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_anyone_declared_bankruptcy_last_7yr__c</fullName>
        <label>Has anyone declared bankruptcy last 7yr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_AMI_Percent__c</fullName>
        <label>Household AMI Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Income__c</fullName>
        <formula>Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Household Gross Annual Income</inlineHelpText>
        <label>Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Housing Application</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Housing_Application__c.Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Household_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Housing_Application__c</referenceTo>
        <relationshipLabel>Financial Applications</relationshipLabel>
        <relationshipName>Program_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Housing_ETI_w_MCC_w_Program_Loans__c</fullName>
        <formula>(Total_Annual_Housing_Expenses_with_MCC__c - Total_Amount_Requested_from_CCSF__c) / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Annual Housing Expenses with MCC - Total Amount Requested from CCSF) / Household Income</inlineHelpText>
        <label>Housing ETI (w MCC, w Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Housing_ETI_w_MCC_w_o_Program_Loans__c</fullName>
        <formula>Total_Annual_Housing_Expenses_with_MCC__c / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Annual Housing Expenses (with MCC &amp; without program loan) / Total Household Gross Annual Income</inlineHelpText>
        <label>Housing ETI (w MCC, w/o Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Housing_ETI_w_o_MCC_w_Program_Loans__c</fullName>
        <formula>(Total_Annual_Housing_Expenses_w_o_MCC__c - Total_Amount_Requested_from_CCSF__c)/ Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Total Annual Housing Expenses without MCC - Total Amount Requested from CCSF) / Total Household Gross Annual Income</inlineHelpText>
        <label>Housing ETI (w/o MCC, w Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Housing_ETI_w_o_MCC_w_o_Program_Loans__c</fullName>
        <formula>Total_Annual_Housing_Expenses_w_o_MCC__c / Total_Household_Gross_Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Annual Housing Expenses (without MCC &amp; without program loan) / Total Household Gross Annual Income</inlineHelpText>
        <label>Housing ETI (w/o MCC, w/o Program Loans)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_from_above__c</fullName>
        <formula>Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate (from above)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_any_member_on_title_for_another_unit__c</fullName>
        <label>Is any member on title for another unit?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEP_Number__c</fullName>
        <defaultValue>&quot;LEP-&quot;&amp;RIGHT(TEXT(YEAR(TODAY())),2)&amp;&quot;-XXXX-&quot;</defaultValue>
        <label>LEP #</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Branch_Address__c</fullName>
        <formula>Loan_Officer__r.MailingStreet</formula>
        <label>Lender Branch Address</label>
        <type>Text</type>
    </fields>
</CustomObject>